--- a/src/main/webapp/WEB-INF/includes/homeupload.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homeupload.xhtml
@@ -42,9 +42,8 @@
                                 <h:form enctype="multipart/form-data">
                                     <p:growl id="messages" showDetail="true" />
 
-                                    <p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
-                                    <p:commandButton value="Upload" ajax="false" actionListener="#{fileUploadView.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})" class="btn pink darken-3 white-text waves-effect waves-pink " />
-                                    <!--<p:commandButton value="Submit" ajax="false" actionListener="#{fileUploadView.upload}" disabled="true" />-->
+                                    <p:fileUpload value="#{fileUploadController.file}" mode="simple" skinSimple="true"/>
+                                    <p:commandButton value="Upload" ajax="false" actionListener="#{fileUploadController.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})" class="btn pink darken-3 white-text waves-effect waves-pink " />
                                 </h:form>
 
 
