--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -70,21 +70,21 @@
                         <a id="uploadBtn" href="proupload.xhtml" class=" btn-large   pink darken-3 waves-effect waves-pink white-text tooltipped" data-position="bottom" data-tooltip="HELP aves-effect waves-light ME"><i class="material-icons right">file_upload</i>hochladen</a>
                         <p:separator/>
                         <div id="tableBericht" class="responsive-table">
-                            <h:dataTable var="ber" value="#{berichteBean.bericht}">
+                            <h:dataTable value="#{berichtManager.getBerichte()}" var="bericht">
                                 <p:column headerText="Id" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{ber.id}" />
+                                    <h:outputText value="#{bericht.berichtid}" />
                                 </p:column>
 
                                 <p:column headerText="Date" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{ber.date}" />
+                                    <h:outputText value="#{bericht.datum}" />
                                 </p:column>
 
                                 <p:column headerText="Gang" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{ber.gang}" />
+                                    <h:outputText value="#{bericht.gang}" />
                                 </p:column>
 
                                 <p:column headerText="Filiale" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{ber.filiale}" />
+                                    <h:outputText value="#{bericht.fkFiliale}" />
                                 </p:column>
                             </h:dataTable>
                         </div>
