--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -27,12 +27,12 @@
                 <div class="container">
                     <div class="card-content">
                         <h:form>
-                            <h:selectOneMenu id="bland" value="#{filialeBean.filialeSelected}">
+                            <h:selectOneMenu id="bland" value="#{filialeBean.bundeslandSelected}">
                                 <f:selectItem value="Select Bundesland" noSelectionOption="true"/>
                                 <f:selectItems value="#{filialeBean.bundesland}" />
                                 <f:ajax execute="bland" render="region"/>
                             </h:selectOneMenu>
-<!--                            <h:selectOneMenu id="region" value="#{filialeBean.filialeSelected}">
+                            <h:selectOneMenu id="region" value="#{filialeBean.regionSelected}">
                                 <f:selectItem value="Select Region" noSelectionOption="true"/>
                                 <f:selectItems value="#{filialeBean.region}"/>
                                 <f:ajax execute="region" render="filiale"/>
@@ -41,7 +41,7 @@
                                 <f:selectItem value="Select Region" noSelectionOption="true"/>
                                 <f:selectItems value="#{filialeBean.filiale}"/>
                                 <f:ajax execute="filiale" />
-                            </h:selectOneMenu>-->
+                            </h:selectOneMenu>
                             <div id="regionpick" class="input-field center-align">
                                 <select>
                                     <option value="">Region auswählen</option>
