--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -5,7 +5,8 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <!--Import Google Icon Font-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
@@ -25,90 +26,96 @@
         <div class="center-align">
             <div class="card">
                 <div class="container">
-                    <div class="card-content">
-                        
-                        <div id="countrypick" class="input-field center-align" >
-                            <select>
-                                <option value="" disabled="true" >Deutschland</option>
-                            </select>
-                            <label>Länderwahl</label>
+                    <h:form>
+                        <div class="card-content">
+
+                            <div id="countrypick" class="input-field center-align" >
+                                <select>
+                                    <option value="" disabled="true" >Deutschland</option>
+                                </select>
+                                <label>Länderwahl</label>
+                            </div>
+                            <div id="statepick" class="input-field center-align" >
+                                <h:selectOneMenu value="#{filialeBean.bundeslandSelected}">
+                                    <f:selectItems value="#{filialeBean.getBundesland()}"></f:selectItems>
+                                </h:selectOneMenu>
+                            </div>  
+                            <div id="statepick" class="input-field center-align" >
+                                <select>
+                                    <option value="0" >Bundesland auswählen</option>
+                                    <option value="1">Baden-Württemberg</option>
+                                    <option value="2">Hessen</option>
+                                    <option value="3">NRW</option>
+                                </select>
+                                <label>Bundeslandwahl</label>
+                            </div>
+                            <div id="regionpick" class="input-field center-align">
+                                <select>
+                                    <option value="">Region auswählen</option>
+                                    <option value="1">Enz-Kreis</option>
+                                    <option value="2">Stuttgart</option>
+                                    <option value="3">Karlsruhe</option>
+                                </select>
+                                <label>Regionwahl</label>
+                            </div>
+                            <div id="filialpick" class="input-field center-align">
+                                <select>
+                                    <option value="">Filiale auswählen</option>
+                                    <option value="1">Kaufland1</option>
+                                    <option value="2">Kaufland2</option>
+                                    <option value="2">Lidl1</option>
+                                    <option value="3">Lidl2</option>
+                                </select>
+                                <label>Filialwahl</label>
+                            </div>
+
+                            <!--                        <div id="datepick" class="input-field center-align ">
+                                                        <input id="datepick" type="text" class="datepicker"/>
+                                                        <label>Datumswahl</label>
+                                                    </div>-->
+
+
+                            <div  class="input-field center-align">
+                                <input type="date" class="datepicker "></input>
+                                <label>Date</label>
+                            </div>
                         </div>
-                        
-                        <div id="statepick" class="input-field center-align" >
-                            <select>
-                                <option value="0" >Bundesland auswählen</option>
-                                <option value="1">Baden-Württemberg</option>
-                                <option value="2">Hessen</option>
-                                <option value="3">NRW</option>
-                            </select>
-                            <label>Bundeslandwahl</label>
-                        </div>
-                        <div id="regionpick" class="input-field center-align">
-                            <select>
-                                <option value="">Region auswählen</option>
-                                <option value="1">Enz-Kreis</option>
-                                <option value="2">Stuttgart</option>
-                                <option value="3">Karlsruhe</option>
-                            </select>
-                            <label>Regionwahl</label>
-                        </div>
-                        <div id="filialpick" class="input-field center-align">
-                            <select>
-                                <option value="">Filiale auswählen</option>
-                                <option value="1">Kaufland1</option>
-                                <option value="2">Kaufland2</option>
-                                <option value="2">Lidl1</option>
-                                <option value="3">Lidl2</option>
-                            </select>
-                            <label>Filialwahl</label>
-                        </div>
+                    </h:form>
 
-                        <!--                        <div id="datepick" class="input-field center-align ">
-                                                    <input id="datepick" type="text" class="datepicker"/>
-                                                    <label>Datumswahl</label>
-                                                </div>-->
+                    <p:separator/>
+                    <a id="uploadBtn" href="proupload.xhtml" class=" btn-large tooltipped  pink darken-3 waves-effect waves-pink white-text " data-position="bottom" data-tooltip="Bild hochladen"><i class="material-icons right">file_upload</i>hochladen</a>
+
+                    <p:separator/>
 
 
-                        <div  class="input-field center-align">
-                            <input type="date" class="datepicker "></input>
-                            <label>Date</label>
-                        </div>
+                    <div id="tableBericht" class="responsive-table">
+                        <f:facet name="header" >
+                            Bericht
+                        </f:facet>
+                        <p:dataTable value="#{berichteManager.getBerichte()}" var="bericht">
 
+                            <p:column headerText="Id" style="color: #ad1457; background-color: #bdbdbd">
+                                <h:outputText value="#{bericht.berichtid}" />
+                            </p:column>
 
-                        <p:separator/>
-                        <a id="uploadBtn" href="proupload.xhtml" class=" btn-large tooltipped  pink darken-3 waves-effect waves-pink white-text " data-position="bottom" data-tooltip="Bild hochladen"><i class="material-icons right">file_upload</i>hochladen</a>
-                        
-                        <p:separator/>
-                        
-                        
-                        <div id="tableBericht" class="responsive-table">
-                            <f:facet name="header" >
-                                    Bericht
-                                </f:facet>
-                            <p:dataTable var="car" value="#{berichteBean.bericht}">
-                                
-                                <p:column headerText="Id" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{bericht.id}" />
-                                </p:column>
+                            <p:column headerText="Date" style="color: #ad1457; background-color: #bdbdbd">
+                                <h:outputText value="#{bericht.datum}" />
+                            </p:column>
 
-                                <p:column headerText="Date" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{bericht.date}" />
-                                </p:column>
+                            <p:column headerText="Gang" style="color: #ad1457; background-color: #bdbdbd">
+                                <h:outputText value="#{bericht.gang}" />
+                            </p:column>
 
-                                <p:column headerText="Gang" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{bericht.gang}" />
-                                </p:column>
+                            <p:column headerText="Filiale" style="color: #ad1457; background-color: #bdbdbd">
+                                <h:outputText value="#{bericht.fkfiliale}" />
+                            </p:column>
 
-                                <p:column headerText="Filiale" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{bericht.filiale}" />
-                                </p:column>
-                                
-                                <p:column headerText="Status" style="color: #ad1457; background-color: #bdbdbd">
-                                    <h:outputText value="#{bericht.filiale}" />
-                                </p:column>
-                            </p:dataTable>
-                        </div>
+                            <p:column headerText="Status" style="color: #ad1457; background-color: #bdbdbd">
+                                <h:outputText value="#{bericht.status}" />
+                            </p:column>
+                        </p:dataTable>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -125,10 +132,10 @@
 
 
 
-  
-    $(document).ready(function(){
-    $('.tooltipped').tooltip();
-  });
+
+            $(document).ready(function () {
+                $('.tooltipped').tooltip();
+            });
 
 
 
