Berichttabelle Bearbeiten Icon durch Info Icon getauscht

--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -126,7 +126,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="  "/>
                                 </f:facet>
-                                 <i class="material-icons tooltipped" href="" data-position="bottom" data-tooltip="Bericht bearbeiten">create</i>
+                                 <i class="material-icons tooltipped" href="" data-position="bottom" data-tooltip="Bericht ansehen">info</i>
                              </h:column>
                         </h:dataTable>
                     </h:form>
