--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -90,44 +90,44 @@
 
                     <h:form>
                         <h1><h:outputText value="Berichte"/></h1>
-                        <h:dataTable value="#{filialeManager.itemsAvailableSelectMany}" var="item">
+                        <h:dataTable value="#{berichtManager.itemsAvailableSelectMany}" var="item">
                             <h:column>
                                 <f:facet name="header">
-                                    <h:outputText value="Filialid"/>
+                                    <h:outputText value="Berichtid"/>
                                 </f:facet>
-                                <h:outputText value="#{item.filialid}"/>
+                                <h:outputText value="#{item.berichtid}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header">
-                                    <h:outputText value="Filialname"/>
+                                    <h:outputText value="Berichtsname"/>
                                 </f:facet>
-                                <h:outputText value="#{item.filialname}"/>
+                                <h:outputText value="#{item.name}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header">
-                                    <h:outputText value="Bundesland"/>
+                                    <h:outputText value="Gang Nr."/>
                                 </f:facet>
-                                <h:outputText value="#{item.bundesland}"/>
+                                <h:outputText value="#{item.gang}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header">
-                                    <h:outputText value="Region"/>
+                                    <h:outputText value="Datum"/>
                                 </f:facet>
-                                <h:outputText value="#{item.region}"/>
+                                <h:outputText value="#{item.datum}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header">
                                     <h:outputText value="Analyse"/>
                                 </f:facet>
-                                <i class="material-icons green-text">done</i>
-                                <i class="material-icons red-text">clear</i>
+                                <h:graphicImage rendered="#{item.status eq true}" value="images/tick.png" />
+                                <h:graphicImage rendered="#{item.status eq false}" value="images/clear.png" />
                             </h:column>
-                             <h:column>
+                            <h:column>
                                 <f:facet name="header">
                                     <h:outputText value=" "/>
                                 </f:facet>
-                                 <i class="material-icons tooltipped" href="" data-position="bottom" data-tooltip="Bericht ansehen">info</i>
-                             </h:column>
+                                <i class="material-icons tooltipped" href="" data-position="bottom" data-tooltip="Bericht ansehen">info</i>
+                            </h:column>
                         </h:dataTable>
                     </h:form>
 
@@ -152,25 +152,6 @@
                 $('.tooltipped').tooltip();
             });
 
-
-
-
-//            $(document).ready(function () {
-//                $('select').formSelect();
-//                $('.datepicker').datepicker({
-//                    autoClose: true,
-//                    format: 'dd mmm yyyy',
-//                    setDefaultDate: true
-//                });
-//                $('.tooltipped').tooltip();
-//            });
-
-//            $(document).ready(function () {
-//                $('.datepicker').pickadate({
-//                    selectMonths: true, // Creates a dropdown to control month
-//                    selectYears: 15 // Creates a dropdown of 15 years to control year
-//                });
-//            });
         </script>        
     </h:body>
 </ui:composition>
