--- a/src/main/webapp/WEB-INF/includes/homeupload.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homeupload.xhtml
@@ -25,38 +25,38 @@
             <div id="uploadContainer" class="container">
                 <div class="row offset-s3">
                     <div class="col s6 offset-s3">
-                    
+
                         <div class="card">
                             <div class="card-content">
 
-                                
-                                
+
+
                                 <img class="materialboxed center" width="800" src="images/project7upload/platzhalter.jpg" alt="" />
 
 
 
-                               
-                                    <div class="input-field">
-                                        <input id="gang_inline" type="text" class="validate">
-                                            <label for="gang_inline">Gang Nr.</label>
-                                        </input>
-                                    </div>
-                                
+
+                                <div class="input-field">
+                                    <input id="gang_inline" type="text" class="validate">
+                                        <label for="gang_inline">Gang Nr.</label>
+                                    </input>
+                                </div>
+
                                 <h:form enctype="multipart/form-data">
                                     <p:growl id="messages" showDetail="true" />
 
                                     <p:fileUpload value="#{fileUploadController.file}" mode="simple" skinSimple="true"> </p:fileUpload>
                                     <br/>
                                     <br/>
-                                    
-                                    <!--<p:commandButton value="Upload" ajax="false" actionListener="#{fileUploadController.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})" class="btn pink darken-3 white-text waves-effect waves-pink " />-->
-                                    <h:commandLink id="uploadButton" value="#{MSG.UPLOAD}" class="btn pink darken-3 waves-effect  white-text "  type="submit" action="#{fileUploadController.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})"><i class="material-icons right">file_upload</i></h:commandLink>
-                                   
-                                    
-            
-                                </h:form>
-                                
 
+<!--<p:commandButton value="Upload" ajax="false" actionListener="#{fileUploadController.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})" class="btn pink darken-3 white-text waves-effect waves-pink " />-->
+                                    <h:commandLink id="uploadButton" value="#{MSG.UPLOAD}" class="btn pink darken-3 waves-effect  white-text "  type="submit" action="#{fileUploadController.upload()}" onclick="M.toast({html: 'Bild wird hochgeladen!'})"><i class="material-icons right">file_upload</i></h:commandLink>
+
+
+
+                                </h:form>
+
+                                <h:commandLink id="uploadButton" value="#{MSG.REPORT}" class="btn pink darken-3 waves-effect  white-text "  type="submit" action="#{berichtManager.create()}" onclick="M.toast({html: 'Bericht wird erstellt!'})"><i class="material-icons right">description</i></h:commandLink>
                             </div>
                         </div>
                         <a href="prohomepage.xhtml" class=" black-text waves-effect " style="text-align: center"><i class="tiny material-icons ">arrow_back</i>  zu den Berichten  </a>
@@ -66,10 +66,10 @@
         </div>
     </h:body>
     <script>
-          
-    $(document).ready(function(){
-    $('.tooltipped').tooltip();
-  });
+
+        $(document).ready(function () {
+            $('.tooltipped').tooltip();
+        });
 
 
 
