testseite mit gepusht

--- a/src/main/webapp/WEB-INF/includes/homecontent.xhtml
+++ b/src/main/webapp/WEB-INF/includes/homecontent.xhtml
@@ -35,11 +35,18 @@
                                 </select>
                                 <label>Länderwahl</label>
                             </div>
-                            <!--                            <div id="statepick" class="input-field center-align" >
-                                                            <h:selectOneMenu value="#{filialeBean.bundeslandSelected}">
-                                                                <f:selectItems value="#{filialeBean.getBundesland()}"></f:selectItems>
-                                                            </h:selectOneMenu>
-                                                        </div>  -->
+                            <div id="statepick" class="input-field center-align" >
+<!--                                <p:selectOneMenu id="bundesland" class="col s9 m8" value="#{dropdownView.selectedBundesland}">
+                                    <f:selectItem itemValue="#{null}" itemLabel="- - Bundesland auswählen - -" />
+                                    <f:selectItems value="#{filialeManager.bland}"/>
+                                    <f:ajax listener="#{dropdownView.changeBundesland}" render="filialRegion" />
+                                </p:selectOneMenu>-->
+                                <h:selectOneMenu value="#{dropdownView.selectedBundesland}">
+                                    <f:selectItem itemValue="#{null}" itemLabel="-- Bundesland auswählen --"/>
+                                    <f:selectItems value="#{filialeManager.bland}"></f:selectItems>
+                                    <f:ajax listener="#{dropdownView.changeBundesland}" render="filialRegion" />
+                                </h:selectOneMenu>
+                            </div>  
                             <div id="statepick" class="input-field center-align" >
                                 <select>
                                     <option value="0" >Bundesland auswählen</option>
